# pdf-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/pdf_reader/: __main__.py  server.py
